--- a/trellis/group_vars/development/vault.yml
+++ b/trellis/group_vars/development/vault.yml
@@ -8,7 +8,7 @@ vault_sudoer_passwords:
 # Variables to accompany `group_vars/development/wordpress_sites.yml`
 # Note: the site name (`example.com`) must match up with the site name in the above file.
 vault_wordpress_sites:
-  example.com:
+  sideshed.com:
     admin_password: admin
     env:
-      db_password: example_dbpassword
+      db_password: sideshed_dbpassword
